2004-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* sysv_shm.cc (kern_shmat): Add debug_printf's.

2004-08-24  Corinna Vinschen  <corinna@vinschen.de>

	* bsd_mutex.cc (_msleep): Release process object while waiting.

2004-08-03  Corinna Vinschen  <corinna@vinschen.de>

	* transport.cc (transport_layer_base::~transport_layer_base): Resurrect.
	* transport.h (transport_layer_base::~transport_layer_base): Ditto.

2004-07-30  Corinna Vinschen  <corinna@vinschen.de>

	* bsd_mutex.cc (_msleep): Reset event object and close it before
	entering mutex.  Turn order of conditional for better readability.

2004-07-26  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.conf: Describe relation between shmmaxpgs and SHMMAX.

2004-07-20  Corinna Vinschen  <corinna@vinschen.de>

	* bsd_helper.cc: Whitespace fixes.
	* bsd_mutex.cc: Ditto.

2004-07-19  Corinna Vinschen  <corinna@vinschen.de>

	* transport.cc (transport_layer_base::~transport_layer_base): Remove.
	* transport.h (transport_layer_base::~transport_layer_base): Ditto.

2004-07-19  Corinna Vinschen  <corinna@vinschen.de>

	* bsd_mutex.cc (win_priority): Actually calculate p from priority.

2004-06-03  Corinna Vinschen  <corinna@vinschen.de>

	* shm.cc (shmget): Explicitely set td_retval[0] to -1 on error.

2004-03-30  Corinna Vinschen  <corinna@vinschen.de>

	* sysv_shm.cc (shmget): Allow to retrieve shared memory segments
	by shmid when IPC_KEY_IS_SHMID is set.

2004-03-02  Corinna Vinschen  <corinna@vinschen.de>

	* sysv_sem.cc (semundo_adjust): Check for process id instead of
	process struct pointer, which isn't fixed under Cygwin.
	(semexit_myhook): Ditto.  Adjust debug print statements to print
	Cygwin and Windows PIDs instead of process pointer under Cygwin.

2004-02-07  Corinna Vinschen  <corinna@vinschen.de>

	* bsd_mutex.cc (win_priority): Move to msleep helper function section.
	(set_priority): Ditto. Fix formatting.
	(_msleep): Cleanup obj formatting.  Rearrange obj order.
